--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="tomcat-demo">
+    <wb-module deploy-name="form_based_login">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="tomcat-demo"/>
-        <property name="java-output-path" value="/tomcat-demo/build/classes"/>
+        <property name="java-output-path" value="/form_based_login/build/classes"/>
+        <property name="context-root" value="form_based_login"/>
     </wb-module>
 </project-modules>
